--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <p class="p_card">WE<br />MANAGE</p>
               </div>
               <div class="card_img">
-                <img src="img3.jpg" />
+                <img src="img3.jpg" max-height="224px"/>
                 <p class="p_card">WE<br />BUILD</p>
               </div>
             </div>
